--- a/app/views/itineraries/edit.html.erb
+++ b/app/views/itineraries/edit.html.erb
@@ -63,11 +63,7 @@
           </div>
         </form>
       </div>
-      <ul>
-        <% @itinerary.days.each do |day| %>
-        <li><%= day.lodging_address %></li>
-        <% end %>
-      </ul>
+
 
       <!-- Validation failure messages -->
 
@@ -95,46 +91,6 @@
                 <!-- Hidden input for authenticity token to protect from forgery -->
                 <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-                <!-- Label and input for lodging_address -->
-                <div class="form-group">
-                  <label for="lodging_address" class="col-sm-2 control-label">
-                    Lodging address
-                  </label>
-                  <div class="col-sm-10">
-                    <input type="text" id="lodging_address" name="lodging_address" placeholder="Lodging address" class="form-control" value="<%= @day.lodging_address %>">
-                  </div>
-                </div>
-
-                <!-- Label and input for events -->
-                <div class="form-group">
-                  <label for="events" class="col-sm-2 control-label">
-                    Events
-                  </label>
-                  <div class="col-sm-10">
-                    <textarea id="events" name="events" placeholder="Events" class="form-control" rows="3"><%= @day.events %></textarea>
-                  </div>
-                </div>
-
-                <!-- Label and input for origin_location_id -->
-                <div class="form-group">
-                  <label for="origin_location_id" class="col-sm-2 control-label">
-                    Origin location
-                  </label>
-                  <div class="col-sm-10">
-                    <input type="text" id="origin_location_id" name="origin_location_id" placeholder="Origin location" class="form-control" value="<%= @day.origin_location_id %>">
-                  </div>
-                </div>
-
-                <!-- Label and input for transportation -->
-                <div class="form-group">
-                  <label for="transportation" class="col-sm-2 control-label">
-                    Transportation
-                  </label>
-                  <div class="col-sm-10">
-                    <textarea id="transportation" name="transportation" placeholder="Transportation" class="form-control" rows="3"><%= @day.transportation %></textarea>
-                  </div>
-                </div>
-
                 <!-- Label and input for arrival_date -->
                 <div class="form-group">
                   <label for="arrival_date" class="col-sm-2 control-label">
@@ -145,13 +101,32 @@
                   </div>
                 </div>
 
-                <!-- Label and input for notes -->
                 <div class="form-group">
-                  <label for="notes" class="col-sm-2 control-label">
-                    Notes
+                <div class="col-sm-10">
+                <h3>
+                Add A New Location
+                  <a href="/locations/new" class="btn btn-sm btn-success"><i class="fa fa-plus"></i></a>
+                </h3>
+              </div>
+              </div>
+
+                <!-- Label and input for origin_location_id -->
+                <div class="form-group">
+                  <label for="origin_location_id" class="col-sm-2 control-label">
+                    Origin location
                   </label>
                   <div class="col-sm-10">
-                    <textarea id="notes" name="notes" placeholder="Notes" class="form-control" rows="3"><%= @day.notes %></textarea>
+                    <%= select_tag(:origin_location_id, options_from_collection_for_select(Location.all, :id, :location_name, @day.origin_location_id), :class => "form-control") %>
+                  </div>
+                </div>
+
+                <!-- Label and input for destination_location_id -->
+                <div class="form-group">
+                  <label for="destination_location_id" class="col-sm-2 control-label">
+                    Destination location
+                  </label>
+                  <div class="col-sm-10">
+                    <%= select_tag(:destination_location_id, options_from_collection_for_select(Location.all, :id, :location_name, @day.destination_location_id), :class => "form-control") %>
                   </div>
                 </div>
 
@@ -165,17 +140,50 @@
                   </div>
                 </div>
 
-                <input type="hidden" id="itinerary_id" name="itinerary_id" placeholder="Itinerary" class="form-control" value="<%= @itinerary.id %>">
-
-                <!-- Label and input for destination_location_id -->
+                <!-- Label and input for lodging_address -->
                 <div class="form-group">
-                  <label for="destination_location_id" class="col-sm-2 control-label">
-                    Destination location
+                  <label for="lodging_address" class="col-sm-2 control-label">
+                    Lodging address
                   </label>
                   <div class="col-sm-10">
-                    <input type="text" id="destination_location_id" name="destination_location_id" placeholder="Destination location" class="form-control" value="<%= @day.destination_location_id %>">
+                    <input type="text" id="lodging_address" name="lodging_address" placeholder="Lodging address" class="form-control" value="<%= @day.lodging_address %>">
                   </div>
                 </div>
+
+                <!-- Label and input for transportation -->
+                <div class="form-group">
+                  <label for="transportation" class="col-sm-2 control-label">
+                    Transportation
+                  </label>
+                  <div class="col-sm-10">
+                    <textarea id="transportation" name="transportation" placeholder="Transportation" class="form-control" rows="3"><%= @day.transportation %></textarea>
+                  </div>
+                </div>
+
+                <!-- Label and input for events -->
+                <div class="form-group">
+                  <label for="events" class="col-sm-2 control-label">
+                    Events
+                  </label>
+                  <div class="col-sm-10">
+                    <textarea id="events" name="events" placeholder="Events" class="form-control" rows="3"><%= @day.events %></textarea>
+                  </div>
+                </div>
+
+
+                <!-- Label and input for notes -->
+                <div class="form-group">
+                  <label for="notes" class="col-sm-2 control-label">
+                    Notes
+                  </label>
+                  <div class="col-sm-10">
+                    <textarea id="notes" name="notes" placeholder="Notes" class="form-control" rows="3"><%= @day.notes %></textarea>
+                  </div>
+                </div>
+
+
+                <input type="hidden" id="itinerary_id" name="itinerary_id" placeholder="Itinerary" class="form-control" value="<%= @itinerary.id %>">
+
 
                 <div class="form-group">
                   <div class="col-sm-offset-2 col-sm-10">
