--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <title>Itinerary Tracker</title>
 
-
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/sandstone/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <style>
@@ -44,12 +43,13 @@
           <li><a href="/itineraries">Itineraries</a></li>
           <li><a href="/days">Days</a></li>
           <li><a href="/locations">Locations</a></li>
+          <li><a href="#">About</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <% if 1 > 2 %>
-            <li><a href="/users/edit">Oscar the Grouch</a></li>
-            <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign out</a></li>
+          <%if current_user !=nil %>
+            <li><a href="/users/sign_out" data-method="delete">Sign out</a></li>
+            <li><a href="/users/edit"><%= current_user.email %></a></li>
           <% else %>
             <li><a href="/users/sign_up">Sign up</a></li>
             <li><a href="/users/sign_in">Sign in</a></li>
