--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+body {font-family: Arial, Verdana, sans-serif; color: #111111}
+table {width: 600px}
+th, td {padding: 7x 10px 10px 10px;}
+th {text-transform: uppercase; letter-spacing: 0.1m; font-size: 90%; border-bottom: 2px solid #111111; border-top: 1px solid #999; text-align: left; }
+tr.even {background-color: #efefef;}
+tr:hover {background-color: #c3e6e5;}
+.money {text-align: right;}
+
+
