--- a/app/views/itineraries/new.html.erb
+++ b/app/views/itineraries/new.html.erb
@@ -23,7 +23,7 @@
           <!-- Hidden input for authenticity token to protect from forgery -->
           <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-          <!-- Label and input for start_date -->
+          <!-- Label and input for start_date
           <div class="form-group">
             <label for="start_date" class="col-sm-2 control-label">
               Start date
@@ -32,6 +32,22 @@
               <input type="text" id="start_date" name="start_date" placeholder="Start date" class="form-control" value="<%= @itinerary.start_date %>">
             </div>
           </div>
+          -->
+
+      <div class="form-group">
+        <label for="start_date" class="col-sm-2 control-label">Start Date</label>
+        <div class="col-sm-10">
+          <div class="input-group date datetimepicker">
+            <input name="start_date" type="text" class="form-control" id="start_date">
+            <span class="input-group-addon">
+              <i class="fa fa-calendar"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+
+
+
 
           <!-- Label and input for itinerary_name -->
           <div class="form-group">
