--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -1,8 +1,8 @@
 <div class="page-header">
-  <h1>
-    Itineraries
-    <a href="/itineraries/new" class="btn btn-lg btn-success"><i class="fa fa-plus"></i></a>
-  </h1>
+  <h3>
+    Add A New Itinerary
+    <a href="/itineraries/new" class="btn btn-sm btn-success"><i class="fa fa-plus"></i></a>
+  </h3>
 </div>
 
 <!-- Responsive, Isotope-based layout example -->
@@ -17,8 +17,8 @@
 
 <div class="row isotope-container">
 <% @itineraries.each do |itinerary| %>
-  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 isotope-item">
-    <div class="panel panel-default">
+  <div class="isotope-item">
+    <div class="panel panel-info">
       <div class="panel-heading">
         <h3 class="panel-title">Itinerary #<%= itinerary.id %></h3>
       </div>
