table changes to itinerary

--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -18,23 +18,24 @@
 <div class="row isotope-container">
 <% @itineraries.each do |itinerary| %>
   <div class="isotope-item">
-    <div class="panel panel-info">
+    <div class="panel panel-success">
       <div class="panel-heading">
-        <h3 class="panel-title">Itinerary #<%= itinerary.id %></h3>
+        <h2 class="panel-title">Itinerary #<%= itinerary.id %></h2>
       </div>
       <div class="panel-body">
-        <dl>
-          <dt>Start date</dt>
-          <dd><%= itinerary.start_date %></dd>
-
-          <dt>Itinerary name</dt>
-          <dd><%= itinerary.itinerary_name %></dd>
-
-          <dt>User</dt>
-          <dd><%= itinerary.user_id %></dd>
-
-        </dl>
-        <div class="btn-group btn-group-justified">
+        <table>
+        <tr>
+          <th>Start date</th>
+          <th>Itinerary name</th>
+          <th>User</th>
+          </tr>
+          <tr>
+            <td><%= itinerary.start_date %></td>
+            <td><%= itinerary.itinerary_name %></td>
+            <td><%= itinerary.user_id %></td>
+          </tr>
+        </table>>
+          <div class="btn-group btn-group-justified">
           <a href="/itineraries/<%= itinerary.id %>" class="btn btn-primary">
             <i class="fa fa-search-plus"></i>
           </a>
