--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,11 +15,12 @@
  */
 
 body {font-family: Arial, Verdana, sans-serif; color: #111111}
-table {width: 600px}
-th, td {padding: 7x 10px 10px 10px;}
-th {text-transform: uppercase; letter-spacing: 0.1m; font-size: 90%; border-bottom: 2px solid #111111; border-top: 1px solid #999; text-align: left; }
+table {width: 1200px}
+th, td {padding: 15px; text-align: center;}
+th {border: 1px solid #111111; text-transform: uppercase; letter-spacing: 0.1m; font-size: 90%; text-align: center; }
 tr.even {background-color: #efefef;}
+tr.odd {background-color: #0088dd;}
 tr:hover {background-color: #c3e6e5;}
-.money {text-align: right;}
+
 
 
