--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -1,25 +1,24 @@
 <!-- Responsive panel example-->
 
 <div class="row">
-  <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
-    <div class="panel panel-default">
+  <div class="">
+    <div class="panel panel-success">
       <div class="panel-heading">
         <h3 class="panel-title">Itinerary #<%= @itinerary.id %></h3>
       </div>
       <div class="panel-body">
-        <div class="row">
-          <div class="col-md-12">
-            <dl class="dl-horizontal">
-              <dt>Start date</dt>
-              <dd><%= @itinerary.start_date.strftime("%B %e, %Y") %></dd>
-
-              <dt>Itinerary name</dt>
-              <dd><%= @itinerary.itinerary_name %></dd>
-
-              <dt>User</dt>
-              <dd><%= @itinerary.user_id %></dd>
-
-            </dl>
+ <table>
+        <tr>
+          <th>Start date</th>
+          <th>Itinerary name</th>
+          <th>User</th>
+          </tr>
+          <tr>
+            <td><%= @itinerary.start_date %></td>
+            <td><%= @itinerary.itinerary_name %></td>
+            <td><%= @itinerary.user_id %></td>
+          </tr>
+        </table>>
             <div class="btn-group btn-group-justified">
               <a href="/itineraries" class="btn btn-primary">
                 <i class="fa fa-chevron-left"></i>
@@ -35,32 +34,32 @@
             </div>
           </div>
         </div>
-      </div>
+
 
       <div class="table-responsive"  class="btn-group btn-group-justified">
-      <table style="width:100%" cellpadding="10" cellspacing="5" class="table table-striped" class="table table-bordered" class="table table-hover" class="table">
+      <table>
         <tr>
-          <th scope="col">View</th>
-          <th scope="col">Edit</th>
-          <th scope="col">Delete</th>
-          <th scope="col">Arrival Date</th>
-          <th scope="col">Origin Location</th>
-          <th scope="col">Destination Location</th>
+          <th>View</th>
+          <th>Edit</th>
+          <th>Delete</th>
+          <th>Arrival Date</th>
+          <th>Origin Location</th>
+          <th>Destination Location</th>
         </tr>
         <% @itinerary.days.each do |day| %>
         <tr>
-          <td colspan="1" a href="/days" class="btn btn-primary">
+          <td><a href="/days" class="btn btn-primary">
           <i class="fa fa-search-plus"></i>
         </a></td>
-         <td colspan="1" a href="/days" class="btn btn-warning">
-          <i class="fa fa-search-edit"></i>
+         <td><a href="/days" class="btn btn-warning">
+          <i class="fa fa-edit"></i>
         </a></td>
-          <td colspan="1" a href="/days" class="btn btn-danger">
+          <td><a href="/days" class="btn btn-danger">
           <i class="fa fa-trash-o"></i>
         </a></td>
-          <td colspan="1"><%= day.arrival_date%></td>
-          <td colspan="1"><%= day.origin_location_id %></td>
-          <td colspan="1"><%= day.destination_location_id %></td>
+          <td><%= day.arrival_date%></td>
+          <td><%= day.origin_location_id %></td>
+          <td><%= day.destination_location_id %></td>
         </tr>
         <% end %>
       </table>
