tables updated - layout changes

--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -11,14 +11,12 @@
         <tr>
           <th>Start date</th>
           <th>Itinerary name</th>
-          <th>User</th>
           </tr>
           <tr>
             <td><%= @itinerary.start_date %></td>
             <td><%= @itinerary.itinerary_name %></td>
-            <td><%= @itinerary.user_id %></td>
           </tr>
-        </table>>
+        </table>
             <div class="btn-group btn-group-justified">
               <a href="/itineraries" class="btn btn-primary">
                 <i class="fa fa-chevron-left"></i>
