--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -16,42 +16,45 @@
 <hr>
 
 <div class="row isotope-container">
-<% @itineraries.each do |itinerary| %>
   <div class="isotope-item">
     <div class="panel panel-success">
       <div class="panel-heading">
-        <h2 class="panel-title">Itinerary #<%= itinerary.id %></h2>
+        <h2 class="panel-title">Itineraries</h2>
       </div>
       <div class="panel-body">
         <table>
         <tr>
           <th>Start date</th>
           <th>Itinerary name</th>
-          <th>User</th>
-          </tr>
-          <tr>
-            <td><%= itinerary.start_date %></td>
-            <td><%= itinerary.itinerary_name %></td>
-            <td><%= itinerary.user_id %></td>
-          </tr>
-        </table>>
-          <div class="btn-group btn-group-justified">
-          <a href="/itineraries/<%= itinerary.id %>" class="btn btn-primary">
-            <i class="fa fa-search-plus"></i>
-          </a>
+          <th>Action</th>
+        </tr>
+        <% @itineraries.each do |itinerary| %>
+        <tr>
+          <td><%= itinerary.start_date %></td>
+          <td><%= itinerary.itinerary_name %></td>
+          <td>
+            <div class="btn-group">
+              <a href="/itineraries/<%= itinerary.id %>" class="btn btn-primary">
+                <i class="fa fa-search-plus"></i>
+              </a>
 
-          <a href="/itineraries/<%= itinerary.id %>/edit" class="btn btn-warning">
-            <i class="fa fa-edit"></i>
-          </a>
+              <a href="/itineraries/<%= itinerary.id %>/edit" class="btn btn-warning">
+                <i class="fa fa-edit"></i>
+              </a>
 
-          <a href="/delete_itinerary/<%= itinerary.id %>" class="btn btn-danger" rel="nofollow">
-            <i class="fa fa-trash-o"></i>
-          </a>
-        </div>
+              <a href="/delete_itinerary/<%= itinerary.id %>" class="btn btn-danger" rel="nofollow">
+                <i class="fa fa-trash-o"></i>
+              </a>
+            </div>
+          </td>
+        </tr>
+        <% end %>
+        </table>
+
       </div>
     </div>
   </div>
-<% end %>
+
 </div>
 
 <!-- You can ignore the following. It's a quick and dirty example of how to get a Pinterest-style layout with quick search. -->
