--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,12 +14,12 @@
  *= require_self
  */
 
-body {font-family: Arial, Verdana, sans-serif; color: #111111}
-table {width: 1100px}
-th, td {padding: 15px; text-align: center;}
-th {border: 1px solid #111111; text-transform: uppercase; letter-spacing: 0.1m; font-size: 90%; text-align: center;}
-tr.even {background-color: #efefef;}
-tr.odd {background-color: #0088dd;}
+body {font-family: Arial, Verdana, sans-serif; color: #282828}
+table {width: 1150px}
+th, td {padding: 15px; text-align: center}
+th {border: 3px solid #C0C0C0; text-transform: uppercase; letter-spacing: 0.1m; font-size: 90%; text-align: center;}
+tr.odd {background-color: #E0E0E0;}
+/*tr {background-color: #0088dd;}*/
 tr:hover {background-color: #c3e6e5;}
 
 
