--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -11,13 +11,13 @@
         <tr>
           <th>Start date</th>
           <th>Itinerary name</th>
+          <th>Action</th>
           </tr>
           <tr>
             <td><%= @itinerary.start_date %></td>
             <td><%= @itinerary.itinerary_name %></td>
-          </tr>
-        </table>
-            <div class="btn-group btn-group-justified">
+            <td>
+            <div class="btn-group">
               <a href="/itineraries" class="btn btn-primary">
                 <i class="fa fa-chevron-left"></i>
               </a>
@@ -29,6 +29,9 @@
               <a href="/delete_itinerary/<%= @itinerary.id %>" class="btn btn-danger" rel="nofollow">
                 <i class="fa fa-trash-o"></i>
               </a>
+              </tr>
+              </td>
+            </table>
             </div>
           </div>
         </div>
@@ -37,27 +40,25 @@
       <div class="table-responsive"  class="btn-group btn-group-justified">
       <table>
         <tr>
-          <th>View</th>
-          <th>Edit</th>
-          <th>Delete</th>
           <th>Arrival Date</th>
           <th>Origin Location</th>
           <th>Destination Location</th>
+          <th>Action</th>
         </tr>
         <% @itinerary.days.each do |day| %>
         <tr>
-          <td><a href="/days" class="btn btn-primary">
-          <i class="fa fa-search-plus"></i>
-        </a></td>
-         <td><a href="/days" class="btn btn-warning">
-          <i class="fa fa-edit"></i>
-        </a></td>
-          <td><a href="/days" class="btn btn-danger">
-          <i class="fa fa-trash-o"></i>
-        </a></td>
           <td><%= day.arrival_date%></td>
           <td><%= day.origin_location_id %></td>
           <td><%= day.destination_location_id %></td>
+          <td><a href="/days" class="btn btn-primary">
+          <i class="fa fa-search-plus"></i>
+        </a>
+        <a href="/days" class="btn btn-warning">
+          <i class="fa fa-edit"></i>
+        </a>
+        <a href="/days" class="btn btn-danger">
+          <i class="fa fa-trash-o"></i>
+        </a></td>
         </tr>
         <% end %>
       </table>
