--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -50,13 +50,13 @@
           <td><%= day.arrival_date%></td>
           <td><%= day.origin_location_id %></td>
           <td><%= day.destination_location_id %></td>
-          <td><a href="/days" class="btn btn-primary">
+          <td><a href="/days/<%= day.id %>" class="btn btn-primary">
           <i class="fa fa-search-plus"></i>
         </a>
-        <a href="/days" class="btn btn-warning">
+        <a href="/days/<%= day.id %>"" class="btn btn-warning">
           <i class="fa fa-edit"></i>
         </a>
-        <a href="/days" class="btn btn-danger">
+        <a href="/itineraries/<%= @itinerary.id %>" class="btn btn-danger">
           <i class="fa fa-trash-o"></i>
         </a></td>
         </tr>
