redirecting "days/show" go back button

--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -39,7 +39,7 @@
 
             </dl>
             <div class="btn-group btn-group-justified">
-              <a href="/days" class="btn btn-primary">
+              <a href="/itineraries/<%= @day.itinerary_id %>" class="btn btn-primary">
                 <i class="fa fa-chevron-left"></i>
               </a>
 
