--- a/app/views/itineraries/edit.html.erb
+++ b/app/views/itineraries/edit.html.erb
@@ -28,9 +28,24 @@
               Start date
             </label>
             <div class="col-sm-10">
-              <input type="text" id="start_date" name="start_date" placeholder="Start date" class="form-control" value="<%=  @itinerary.start_date.strftime("%B %e, %Y") %>">
+               <input type="text" id="start_date" name="start_date" placeholder="Start date" class="form-control" value="<%=  @itinerary.start_date %>">
             </div>
           </div>
+
+
+          <!--
+        <div class="form-group">
+        <label for="start_date" class="col-sm-2 control-label">Start Date</label>
+        <div class="col-sm-10">
+          <div class="input-group date" id= "datetimepicker1">
+            <input name="start_date" type="text" class="form-control" id="start_date" value="<%=  @itinerary.start_date %>">
+            <span class="input-group-addon">
+              <span class="glyphicon glyphicon-calendar"></span>
+            </span>
+          </div>
+        </div>
+      </div>
+-->
 
           <!-- Label and input for itinerary_name -->
             <div class="form-group">
@@ -195,5 +210,9 @@
   </div>
 </div>
 
-
+<script type="text/javascript">
+  $(function () {
+    $('#datetimepicker1').datetimepicker();
+  });
+</script>
 <!-- End responsive panel example -->
