--- a/app/views/itineraries/new.html.erb
+++ b/app/views/itineraries/new.html.erb
@@ -23,31 +23,18 @@
           <!-- Hidden input for authenticity token to protect from forgery -->
           <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-          <!-- Label and input for start_date
-          <div class="form-group">
-            <label for="start_date" class="col-sm-2 control-label">
-              Start date
-            </label>
-            <div class="col-sm-10">
-              <input type="text" id="start_date" name="start_date" placeholder="Start date" class="form-control" value="<%= @itinerary.start_date %>">
-            </div>
-          </div>
-          -->
-
+          <!-- Label and input for start_date-->
       <div class="form-group">
         <label for="start_date" class="col-sm-2 control-label">Start Date</label>
         <div class="col-sm-10">
-          <div class="input-group date datetimepicker">
-            <input name="start_date" type="text" class="form-control" id="start_date">
+          <div class="input-group date" id= "datetimepicker1">
+            <input name="start_date" placeholder="Select Calendar for Date" type="text" class="form-control" id="start_date">
             <span class="input-group-addon">
-              <i class="fa fa-calendar"></i>
+              <span class="glyphicon glyphicon-calendar"></span>
             </span>
           </div>
         </div>
       </div>
-
-
-
 
           <!-- Label and input for itinerary_name -->
           <div class="form-group">
@@ -75,5 +62,11 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(function () {
+    $('#datetimepicker1').datetimepicker();
+  });
+</script>
 
 <!-- End responsive panel example -->
