--- a/app/views/itineraries/edit.html.erb
+++ b/app/views/itineraries/edit.html.erb
@@ -28,24 +28,15 @@
               Start date
             </label>
             <div class="col-sm-10">
-               <input type="text" id="start_date" name="start_date" placeholder="Start date" class="form-control" value="<%=  @itinerary.start_date %>">
-            </div>
-          </div>
-
-
-          <!--
-        <div class="form-group">
-        <label for="start_date" class="col-sm-2 control-label">Start Date</label>
-        <div class="col-sm-10">
-          <div class="input-group date" id= "datetimepicker1">
-            <input name="start_date" type="text" class="form-control" id="start_date" value="<%=  @itinerary.start_date %>">
-            <span class="input-group-addon">
+                <div class="input-group date" id= "datetimepicker1">
+                  <input type="text" id="start_date" name="start_date" placeholder="Start date" class="form-control" value="<%=  @itinerary.start_date %>">
+              <span class="input-group-addon">
               <span class="glyphicon glyphicon-calendar"></span>
             </span>
+            </div>
           </div>
-        </div>
-      </div>
--->
+          </div>
+
 
           <!-- Label and input for itinerary_name -->
             <div class="form-group">
@@ -102,9 +93,27 @@
                     Arrival date
                   </label>
                   <div class="col-sm-10">
-                    <input type="text" id="arrival_date" name="arrival_date" placeholder="Arrival date" class="form-control" value="<%= @day.arrival_date %>">
+                  <div class="input-group date" id= "datetimepicker1">
+                    <input type="text" id="arrival_date" name="arrival_date" placeholder="Select Calendar for Date" class="form-control" value="<%= @day.arrival_date %>">
+                      <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
                   </div>
                 </div>
+                </div>
+
+                <!--
+                <div class="form-group">
+                  <label for="start_date" class="col-sm-2 control-label">Start Date</label>
+                  <div class="col-sm-10">
+                    <div class="input-group date" id= "datetimepicker1">
+                      <input name="start_date" placeholder="Select Calendar for Date" type="text" class="form-control" id="start_date">
+                      <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
+                    </div>
+                  </div>
+                </div> -->
 
                 <div class="form-group">
                 <div class="col-sm-10">
@@ -215,4 +224,5 @@
     $('#datetimepicker1').datetimepicker();
   });
 </script>
+
 <!-- End responsive panel example -->
