--- a/app/views/itineraries/edit.html.erb
+++ b/app/views/itineraries/edit.html.erb
@@ -12,8 +12,7 @@
 <!-- Responsive panel example -->
 
 <div class="row">
-  <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
-    <div class="panel panel-default">
+    <div class="panel panel-success">
       <div class="panel-heading">
         <h3 class="panel-title">Edit Itinerary #<%= @itinerary.id %></h3>
       </div>
@@ -77,10 +76,9 @@
       <!-- Responsive panel example -->
 
       <div class="row">
-        <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
-          <div class="panel panel-default">
+          <div class="panel panel-success">
             <div class="panel-heading">
-              <h3 class="panel-title">Add Day</h3>
+              <h3 class="panel-title">Add A New Day to Itinerary</h3>
             </div>
             <div class="panel-body">
               <form action="/create_day" method="post" class="form-horizontal">
@@ -211,12 +209,12 @@
               </form>
             </div>
           </div>
-        </div>
+
       </div>
 
       <!-- End responsive panel example -->
     </div>
-  </div>
+
 </div>
 
 <script type="text/javascript">
