reroute location of days once edited

--- a/app/views/itineraries/show.html.erb
+++ b/app/views/itineraries/show.html.erb
@@ -31,7 +31,7 @@
               </a>
           </td>
           <td>
-              <a href="/itineraries/<%= @itinerary.id %>/edit" class="btn btn-success" method = "post" rel="nofollow">
+              <a href="/days/new" class="btn btn-success" method = "post" rel="nofollow">
                 <i class="fa fa-calendar"></i>
               </a>
           </td>
