--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -17,8 +17,8 @@
 
 <div class="row isotope-container">
 <% @locations.each do |location| %>
-  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 isotope-item">
-    <div class="panel panel-default">
+  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 isotope-item">
+    <div class="panel panel-success">
       <div class="panel-heading">
         <h3 class="panel-title">Location #<%= location.id %></h3>
       </div>
