--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -12,8 +12,7 @@
 <!-- Responsive panel example -->
 
 <div class="row">
-  <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
-    <div class="panel panel-default">
+    <div class="panel panel-success">
       <div class="panel-heading">
         <h3 class="panel-title">Edit Location #<%= @location.id %></h3>
       </div>
@@ -64,7 +63,6 @@
         </form>
       </div>
     </div>
-  </div>
 </div>
 
 
