--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,8 +1,7 @@
 <!-- Responsive panel example-->
 
 <div class="row">
-  <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
-    <div class="panel panel-default">
+    <div class="panel panel-success">
       <div class="panel-heading">
         <h3 class="panel-title">Location #<%= @location.id %></h3>
       </div>
@@ -37,7 +36,7 @@
         </div>
       </div>
     </div>
-  </div>
+
 </div>
 
 <!-- End responsive panel example -->
