Add New button updates

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,8 +1,8 @@
 <div class="page-header">
-  <h1>
-    Locations
+  <h3>
+    Add a New Location
     <a href="/locations/new" class="btn btn-lg btn-success"><i class="fa fa-plus"></i></a>
-  </h1>
+  </h3>
 </div>
 
 <!-- Responsive, Isotope-based layout example -->
