--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,8 +1,8 @@
 <div class="page-header">
-  <h1>
-    Days
+  <h3>
+    Add a New Day
     <a href="/days/new" class="btn btn-lg btn-success"><i class="fa fa-plus"></i></a>
-  </h1>
+  </h3>
 </div>
 
 <!-- Responsive, Isotope-based layout example -->
